<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageButton
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/round_btn"
        android:onClick="home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_small" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="100sp"
        android:fontFamily="@font/nehama"
        android:text="@string/options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_high_scores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options">

        <TextView
            android:id="@+id/reset_levels"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/reset_levels"
            android:onClick="resetLevels"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="50sp"
            android:fontFamily="@font/nehama"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/reset_score"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:onClick="resetScore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reset_levels"
            android:text="@string/reset_score"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="50sp"
            android:fontFamily="@font/nehama"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/delete_scores"
            android:layout_width="match_parent"
            android:gravity="center"
            android:onClick="deleteScores"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reset_score"
            android:text="@string/delete_all_scores"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="50sp"
            android:fontFamily="@font/nehama"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/muteUnmute"
            android:layout_width="match_parent"
            android:gravity="center"
            android:onClick="muteUnmute"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delete_scores"
            android:text="@string/mute"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="50sp"
            android:fontFamily="@font/nehama"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>